# Event-Ticketing-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  postman_collection.json  pyproject.toml  seed.py  supervisord.conf  turbo.json
.github/workflows/: ci.yml
apps/backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
apps/web/: .dockerignore  Dockerfile  nginx.conf  package.json
core/: redis.py
core/config/: __init__.py  settings.py
core/db/: base.py  session.py
core/enums/: __init__.py
core/exceptions/: __init__.py
core/middleware/: __init__.py  request_context.py
core/observability/: __init__.py  sentry.py
core/security/: __init__.py  auth.py  jwt.py  refresh.py
docs/: FEATURE-1-OPENAPI-SDK.md  FEATURE-2-RATE-LIMIT-CACHE.md  FEATURE-3-WEBSOCKET.md  PHASES.md  REQUIREMENTS.md
k8s/: deploy-minikube.ps1  namespace.yaml  network-policy-backend.yaml  network-policy-gateway.yaml
k8s/base/: admitter-deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  keda-gateway-scaler.yaml  keda-queue-scaler.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  network-policies.yaml  pdb.yaml  relay-deployment.yaml  sweeper-deployment.yaml
k8s/minikube/: ingress.yaml  kustomization.yaml  migration-job.yaml  postgres.yaml  redis.yaml  (+1 more)
migrations/: env.py
tests/: conftest.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+168 files in other folders)
