[project]
name = "event-ticketing-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=21.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.3",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "zxcvbn>=4.4.28",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "opentelemetry-distro>=0.45b0",
    "sentry-sdk>=1.43.0",
    "stripe>=10.0.0",
    "bcrypt>=3.1.0,<5.1",
]

[tool.setuptools.packages.find]
include = ["core*", "services*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disable_error_code = ["empty-body"]
exclude = ["venv", "migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "testcontainers[postgres,redis]>=4.0.1",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "hypothesis>=6.100.0",
    "locust>=2.27.0",
    "psycopg2-binary>=2.9.9",
]